added landing page and login/signup button

--- a/src/client/dashboard.html
+++ b/src/client/dashboard.html
@@ -7,9 +7,8 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/client/main.js"></script>
-    <link rel="stylesheet" href = /src/client/style.css>
+    <script type="module" src="main.js"></script>
+    <link rel="stylesheet" href = css/dashboard.css>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.5.1/katex.min.css">
 
     <div class="container-fluid navigation-bar">
