fixed file imports for dashboard page

--- a/src/client/dashboard.html
+++ b/src/client/dashboard.html
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="js/dashboard/main.js"></script>
     <link rel="stylesheet" href = css/dashboard.css>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.5.1/katex.min.css">
 
