--- a/src/client/index.html
+++ b/src/client/index.html
@@ -112,7 +112,7 @@
                 <h2>Create Account</h2>
                 <div class="form-group">
                     <label for="register-email">Email</label>
-                    <input type="email" id="regiser-email" name="email" placeholder="Enter your email" required>
+                    <input type="email" id="register-email" name="email" placeholder="Enter your email" required>
                 </div>
                 <div class="form-group">
                     <label for="register-username">Username</label>
